# snake-with-rust

./: .gitignore  Cargo.toml  README.md  pyproject.toml
src/: lib.rs
tests/: test_snakeplace.py
