[project]
name = "snake"
version = "0.0.1"
authors = [
  { name="Ed Chapman" },
]
description = "A demo for replacing Python with Rust."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]


[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project.optional-dependencies]
dev = ["maturin","pytest"]

# Feature of the Rust pyo3 crate that is required by maturin.
# Setting the feature in Cargo.toml prevents Rust tests from building.
# https://pyo3.rs/latest/faq.html#i-cant-run-cargo-test-or-i-cant-build-in-a-cargo-workspace-im-having-linker-issues-like-symbol-not-found-or-undefined-reference-to-_pyexc_systemerror
[tool.maturin]
features = ["pyo3/extension-module"]